inventory completed